# presyence

./: .gitignore  README.md  clone_frontend_build_into_package.sh  http-server.sh  inject_json_into_js.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/cypress/e2e/: hardRefresh.cy.ts  homePage.cy.ts
frontend/cypress/support/: component.ts
frontend/src/: App.vue  main.ts  testReport.ts
frontend/src/assets/: input.json  worker.js  worker.ts
frontend/src/components/: CodeBlock.vue  Counter.vue  DataFrameBlock.vue  EveryTestsSummaries.vue  TestDetail.vue
frontend/src/router/: index.ts
frontend/src/stores/: testsReports.ts
frontend/src/views/: CounterView.vue  HomeView.vue  TestDetailView.vue  WorkerView.vue
presyence/: .gitignore  pyproject.toml
presyence/presyence/: main.py  simpletests.py
presyence/presyence/reporter/: access_static.py  inject_json_into_js.py  server.py
presyence/presyence/reporter/www/: index.html
presyence/presyence/reporter/www/assets/: index.12c86945.js  worker.7c722edd.js
presyence/presyence/testrunner/: discovery.py
presyence/tests/: test_presyence.py
testrunner/: class_definitions.py  demo.py  demo_function.py  discovery.py  try_run_test.py
testrunner/arbitraty/: function.spec.sy.py
testrunner/remi-portal-gun/: README.md  pyproject.toml
testrunner/remi-portal-gun/remi_portal_gun/: access_static.py  discovery.py  faster.sh  inject_json_into_js.py  main.py  server.py
testrunner/remi-portal-gun/tests/: test_remi_portal_gun.py
(+3 files in other folders)
