[tool.poetry]
name = "presyence"
version = "0.1.4"
description = ""
authors = ["Rémi Connesson <remiconnesson@gmail.com>"]

[tool.poetry.scripts]
presyence = "presyence.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"
pandas = "^1.4.3"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
