[tool.poetry]
name = "remi-portal-gun"
version = "0.5.0"
description = ""
authors = ["Rémi Connesson <remiconnesson@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
remi-portal-gun = "remi_portal_gun.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"
fastapi = "^0.80.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
